go-app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-portfolio
  namespace: go-app
  labels:
    role: go-portfolio
    env: dev
spec: 
  replicas: 1
  selector: 
    matchLabels:
      role: go-portfolio
  template: 
    metadata: 
      labels: 
        role: go-portfolio
    spec:
      containers: 
      - name: go-portfolio
        image: shubhamshinde2206/go-app:latest
        imagePullPolicy: Always
        ports: 
        - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata: 
  name: go-portfolio-svc
  namespace: go-app
spec: 
  ports: 
  - port: 80
    targetPort: 8080
  type: ClusterIP
  selector: 
    role: go-portfolio
