go-app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-lb
  namespace: go-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-portfolio-svc
                port:
                  number: 80
